--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -107,7 +107,7 @@
             <!-- Just Login & Signup Links -->
             <div class="custom-navbar-links">
                 <a href="{% url 'account_login' %}">Login</a>
-                <a href="{% url 'account_signup' %}">Sign Up</a>
+                <a href="{% url 'register' %}">Sign Up</a>
             </div>
         </div>
     </nav>
