--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -24,7 +24,7 @@
     </div>
 -->
     
-    <div class="unique-right-sidebar">
+    <div class="unique-left-sidebar">
 
         <h3>Recommended Users</h3>
         {% for user in top_users %}
