--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -15,6 +15,14 @@
     <link rel="manifest" href="{% static 'manifest.json' %}">
 
     <!-- Bootstrap CSS -->
+     <!-- Bootstrap CSS (already included in base.html) -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Bootstrap JS and Dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{% static 'projects/styles.css' %}">
@@ -77,7 +85,7 @@
                         <p>Account</p>
                         <ul>
                             <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
-                            <li><a href="#">Settings & Privacy</a></li>
+                            <li><a href="{% url 'settings' %}">Settings & Privacy</a></li>
                             <li><a href="{% url 'help' %}">Help</a></li>
                         </ul>
                     </div>
