--- a/projects/templates/projects/profile.html
+++ b/projects/templates/projects/profile.html
@@ -56,7 +56,7 @@
                         <p>Account</p>
                         <ul>
                           <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
-                          <li><a href="#">Settings & Privacy</a></li>
+                          <li><a href="{% url 'settings' %}">Settings & Privacy</a></li>
                           <li><a href="{% url 'help' %}">Help</a></li>
                           <li><a href="#">Language</a></li>
                         </ul>
