adjust search-button to match other button styling for mobile

--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -4573,6 +4573,11 @@ select.form-control,
         font-size: 20px;
         padding: 5px 10px;
     }
+
+    .search-btn {
+        font-size: 20px;
+        padding: 5px 10px;
+    }
 }
 
 @media (max-width: 768px) {
