--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -51,7 +51,7 @@
                 </a>
                 <a href="{% url 'network' %}">
                     <i class="fa fa-users"></i>
-                    <span>My Network</span>
+                    <span>Network</span>
                 </a>
                 <a href="{% url 'active_conversations' %}">
                     <i class="fa fa-comments"></i>
