--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -61,6 +61,10 @@
                     <i class="fa fa-bell"></i>
                     <span>Notifications</span>
                 </a>
+                <a href="{% url 'feed' %}">
+                    <i class="fa fa-rss"></i>
+                    <span>Feeds</span>
+                </a>
             </div>
 
             <!-- Profile Dropdown -->
